--- a/packages/omvc/package.json
+++ b/packages/omvc/package.json
@@ -10,6 +10,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "fs-extra": "^7.0.0",
     "tslib": "^1",
     "tslint": "^5.11.0"
   },
@@ -17,8 +18,9 @@
     "@oclif/dev-cli": "^1",
     "@oclif/tslint": "^3",
     "@types/chai": "^4",
+    "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^5",
-    "@types/node": "^10",
+    "@types/node": "^10.9.4",
     "globby": "^8",
     "ts-node": "^7",
     "tslint": "^5",
